Minor fixes
- Made events section more responsive
- Made landing overlay not overlap with header
- removed `opening.js` and `opening.scss` in `/components/index/`
- improved openings

--- a/src/components/index/events.scss
+++ b/src/components/index/events.scss
@@ -124,18 +124,15 @@
 		}
 		.showcase-container{
 			width: 100%;
-			height: 75vw;
 			margin: 10% 0;
 			#showcase {
-				width: 75%;
+				width: 75vw;
+				height: 75vw;
 				margin: 0;
 				padding-bottom: 5%;
 				transform: rotate(0deg);
 
 				.diamond {
-					width: 35vw;
-					height: 35vw;
-					margin: 1vw;
 					border-radius: 20px;
 
 					.diamond-content{
